<resources>
    <string name="app_name">Boggle</string>
    <string name="action_settings">Settings</string>
    <string name="title">Boggle</string>
    <string name="one_player">One Player</string>
    <string name="two_player">Two Player</string>
    <string name="highscores">Highscores</string>
    <string name="help">Help</string>
    <string name="title_activity_one_player">One Player</string>
    <string name="title_activity_two_player">Two Player</string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="activity_help">Help</string>
    <string name="title_popup_words_list">Words List</string>
    <string name="title_popup_solution">Solution</string>

    <string name="user_score">Score: 0</string>
    <string name="user_name">Jhasbun</string>
    <string name="countdown_timer">Timer: 900</string>
    <string name="words_button">Words</string>
    <string name="submit_button">Submit</string>
    <string name="solve_button">Solve</string>
    <string name="words_list_empty">You have not found any words yet!</string>
    <string name="words_list_not_empty">You have found the following words:</string>
    <string name="solution_title">Solution:</string>


    <!--bluetooth-->
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="basic">Basic</string>
    <string name="basic_multi">Basic</string>
    <string name="cutthroat">Cutthroat Mode</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_bluetoothChat">Bluetooth Chat</string>
    <string name="title_activity_deviceListActivity">Device List</string>

    <string name="app_id">252147462214</string>

</resources>

