<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:showIn="@layout/activity_main_menu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="6">

        <TextView android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button android:id="@+id/one_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/one_player"
            android:onClick="onePlayerScreen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button android:id="@+id/two_player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/two_player"
            android:onClick="twoPlayerScreen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="50dp">

        <Button android:id="@+id/highscores"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/highscores"
            android:onClick="highscoresScreen" />
    </LinearLayout>


</LinearLayout>
