<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/chat_layout"
        android:layout_width="fill_parent"
        android:layout_height="448dp"
        android:orientation="vertical">

        <ListView android:id="@+id/in"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            android:layout_weight="1"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <EditText android:id="@+id/edit_text_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                />
            <Button android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button android:id="@+id/button_basicS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic"
                />

            <Button android:id="@+id/button_cutthroat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cutthroat"
                />

        </LinearLayout>
    </LinearLayout>

    <!--
    <LinearLayout
        android:id="@+id/board_layout"
        android:layout_width="fill_parent"
        android:layout_height="448dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary">

            <TextView android:id="@+id/user_score"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/user_score"
                android:textColor="@color/white" />

            <TextView android:id="@+id/user_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/white" />

            <TextView android:id="@+id/countdown_timer"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/countdown_timer"
                android:textColor="@color/white" />
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="448dp"
            >
            <fragment
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:name="com.project.game.boggle.BoardFragment"
                android:id="@+id/fragment"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                tools:layout="@layout/content_board" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@color/colorPrimary">

            <Button android:id="@+id/show_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/words_button"
                android:onClick="onShowWords" />

            <Button android:id="@+id/submit_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"
                android:onClick="onSubmit" />

            <Button android:id="@+id/solve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solve_button"
                android:onClick="onSolve" />
        </LinearLayout>
    </LinearLayout>
    -->
</LinearLayout>

